<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/serviceCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="true">

    <!--app:cardBackgroundColor="@android:color/transparent"-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">>

        <TextView
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shr_product_title"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceSubtitle2" />

        <TextView
            android:id="@+id/phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shr_product_description"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBody2" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shr_product_description"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBody2" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
